apps/api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: $NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      serviceAccountName: image-puller
      imagePullSecrets:
        - name: regcred
      containers:
        - name: api
          imagePullPolicy: Always
          image: $CI_REGISTRY_HOST/$IMAGE_NAME
          ports:
            - name: http
              containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: $NAMESPACE
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
